--- a/backend/src/main/resources/templates/register.html
+++ b/backend/src/main/resources/templates/register.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>Register</h1>
-<form method="post" action="/api/auth/register">
+<form method="post" action="/register">
     <label>Username: <input type="text" name="username"/></label><br/>
     <label>Password: <input type="password" name="password"/></label><br/>
     <label>Email: <input type="email" name="email"/></label><br/>
